# workmate

./: README.md  pyproject.toml  stats1.csv  stats2.csv
app/: cli.py  models.py  output.py  reader.py  services.py
app/reports/: base.py  clickbait.py
tests/: test_clickbait_report.py  test_reader.py  test_services.py
